[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gotoni"
version = "0.1.2"
description = "A helper package to easily add SSH support to Modal apps."
readme = "README.md"
authors = [
  { name="Alessio Toniolo" }
]
requires-python = ">=3.8"
dependencies = [
    "modal"
]

[project.urls]
"Homepage" = "https://github.com/alessiotoniolo/gotoni"
