[package]
name = "tokenizer-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.20"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
